# momoguard

./: .env.example  .gitignore  AGENT_TASKS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dashboard/: README.md
scripts/: download_data.ps1  retrain.py  train.py
src/: __init__.py
src/api/: config.py  main.py
src/api/db/: crud.py  models.py  session.py
src/api/routers/: feedback.py  health.py  score.py
src/api/schemas/: feedback.py  score_response.py  transaction.py
src/api/services/: currency.py  scorer.py
src/data/: __init__.py  features.py  loader.py  splitter.py
src/models/: evaluator.py  explainer.py  trainer.py
src/monitoring/: __init__.py  drift_report.py  scheduler.py
tests/: __init__.py  conftest.py
tests/integration/: test_feedback_endpoint.py  test_health_endpoint.py  test_score_endpoint.py
tests/performance/: locustfile.py
tests/unit/: test_features.py  test_schemas.py  test_scorer.py
